initial state with some tutorial changes from sitepoint

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
       "locator": "https://github.com/wf9a5m75/phonegap-googlemaps-plugin.git",
       "id": "plugin.google.maps",
       "variables": {
-        "API_KEY_FOR_ANDROID": "????",
-        "API_KEY_FOR_IOS": "????"
+        "API_KEY_FOR_ANDROID": "AIzaSyBspOEGtPYD8Dcr1lARKzNAB_thVcIr8jQ",
+        "API_KEY_FOR_IOS": "AIzaSyBspOEGtPYD8Dcr1lARKzNAB_thVcIr8jQ"
       }
     }
   ],
